Fix #30647: Error in wire drawing of subsurf

Patch by Nicholas Bishop, thanks!